Updated loyalty rewards

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<label title="Show/Hide possible event locations. Will increase initial site load time if enabled. Most in-game events have a cooldown of 15 minutes from completion to active again, and can become active by simply being near them."><img src="img/event/swords.png" alt="" /><input id="opt_bol_displayEvents" type="checkbox" /> Dynamic Events</label>
 						<div id="mapOptionsOther">
 							<label title="Automatically scroll the map to the next predicted event. You'll need to be on the chains page."><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
-							<label title="Show/Hide the colored lines of the event paths."><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths and event icons</label>
+							<label title="Show/Hide the colored lines of the event paths."><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths</label>
 						</div>
 					</div>
 				</div>
