--- a/mapsrc.html
+++ b/mapsrc.html
@@ -558,7 +558,7 @@ var GW2T_COLLECTIBLE_DATA = {
 <section>
 <samp class="jsHelpCollapsible"></samp>
 <div>
-	<p>Each day that you login to Guild Wars 2, you advance the Login Rewards track by one square and receive a reward for that square. The track below is as appear to someone who has never missed a day (white square) since the Login Rewards system started. The track advances automatically at server reset. You can synchronize it with your in-game track (green square) by clicking the appropriate square.</p>
+	<p>Each day that you login to Guild Wars 2, you advance the Login Rewards track by one square and receive a reward for that square. The track below is as appear to someone who has never missed a day (white square) since the Login Rewards system started. The track advances automatically at server reset. If you missed some days, you can synchronize it with your in-game track (green square) by clicking the appropriate square.</p>
 </div>
 <h2>Login Rewards Track</h2>
 	<div id="mapLoginRecord"><span id="mapLoginRecordCurrent"></span>&nbsp;<span id="mapLoginRecordHover"></span></div>
@@ -597,7 +597,7 @@ var GW2T_COLLECTIBLE_DATA = {
 		<img data-src="img/login/bl.png" title="<span class='mapLoginTip'>1? <img src='img/login/bl_stone.png' /><br />1? <img src='img/login/bl_key.png' /><br />1? <img src='img/login/bl_transmutation.png' /><br />1? <img src='img/login/bl_fun.png' /><br />1? <img src='img/login/bl_merchant.png' /><br />1? <img src='img/login/bl_bank.png' /><br />1? <img src='img/login/bl_kit.png' /><br />1? <img src='img/login/bl_tp.png' /><br />1? <img src='img/login/bl_repair.png' /><br />1? <img src='img/login/bl_revive.png' /><br /></span>" />
 		<img data-src="img/login/transmutation.png" title="<span class='mapLoginTip'>3x <img src='img/login/bl_transmutation.png' /></span>" />
 		<img data-src="img/login/experience.png" title="<span class='mapLoginTip'>4x <img src='img/login/experience_i.png' /></span>" />
-		<img data-src="img/login/loyalty.png" title="<span class='mapLoginTip'>2% <img src='img/login/loyalty_coin.png' /><br /><hr /><br />1 <img src='img/login/loyalty_vision.png' /><br />1? <img src='img/login/loyalty_damask.png' /><br />1? <img src='img/login/loyalty_deldrimor.png' /><br />1? <img src='img/login/loyalty_elonian.png' /><br />1? <img src='img/login/loyalty_spiritwood.png' /><br /><br />1-3 <img src='img/login/loyalty_shard.png' /><br />1-3 <img src='img/login/loyalty_clover.png' /><br /><br />20x <img src='img/login/laurel_i.png' /><br /><br />6x <img src='img/login/experience_i.png' /><br /></span>" class="mapLoginWeekend" />
+		<img data-src="img/login/loyalty.png" title="<span class='mapLoginTip'>2% <img src='img/login/loyalty_coin.png' /><br /><hr /><br />1 <img src='img/login/loyalty_vision.png' /><br />1-2? <img src='img/login/loyalty_damask.png' /><br />1-2? <img src='img/login/loyalty_deldrimor.png' /><br />1-2? <img src='img/login/loyalty_elonian.png' /><br />1-2? <img src='img/login/loyalty_spiritwood.png' /><br /><br />8 <img src='img/login/loyalty_shard.png' /><br />7 <img src='img/login/loyalty_clover.png' /><br /><br />20x <img src='img/login/laurel_i.png' /><br /><br />6x <img src='img/login/experience_i.png' /><br /></span>" class="mapLoginWeekend" />
 		</span>
 	</div>
 <br />
@@ -626,6 +626,7 @@ var GW2T_COLLECTIBLE_DATA = {
 	<dt>Personal Story<dt><dd>Progress your current character, or create a new human and run straight to the giant earth hands boss.</dd>
 	<dt>Recycler<dt><dd>Salvage white and blue named items or light and heavy armors.</dd>
 	<dt>Skill Point<dt><dd>Level up or consume your stashed Scrolls of Knowledge.</dd>
+	<dt>Big Spender<dt><dd>Go to the Armor/Weapon Master NPC at the citadel of your borderland and buy the skins (not the armor). Alternatively, replenish your deployable traps.</dd>
 	<dt>Story Dungeon<dt><dd>Play on a character that needs it. <a href="http://wiki.guildwars2.com/wiki/Caudecus's_Manor_(story)">Caudecus' Manor</a> may be the shortest.</dd>
 </dl>
 </section>
@@ -1023,7 +1024,7 @@ A marathon of intricate jumps.
 <h2>Checklists</h2>
 <p>Notepad and checklists are automatically saved in your browser and are restored when you revisit this site. Use the Uncheck All button at every checklists, or go to Options under Defaults to clear everything.</p>
 <h2>Map</h2>
-<p>The map works like Google Maps: you can drag the map to pan, and you can scroll your mouse wheel to zoom. No UI map controls are included in order to maximize viewing. For default view and zoom, click the star button <img class="cntIconExample" data-src="img/ui/star.png" alt="Icon" /> on the side menu or the map page button.
+<p>The map works like Google Maps: you can drag the map to pan, and you can scroll your mouse wheel to zoom. No UI map controls are included in order to maximize viewing. For default view and zoom, click the star button <img class="cntIconExample" src="img/ui/star.png" alt="Icon" /> on the side menu or the map page button.
 <h2>Icons</h2>	
 <p>Expanding a section will show that section's map icons, and collapsing a section hides them. To view multiple sections' icons, click the section names and keep them expanded. Else, use the sidebar menu to view one section at a time.</p>
 <p>Map icons are interactive by clicking/double clicking, most of which causes the map to zoom in that icon, or zoom out back to default. &quot;Pins&quot; look like the colored star symbols you see in the GW2 minimap and are draggable and can be hidden by double clicking; you can lay your own personal pin by double clicking an empty map area.</p>
