GW2Navi update, scroll bar

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -597,7 +597,7 @@ var GW2T_COLLECTIBLE_DATA = {
 		<img data-src="img/login/bl.png" title="<span class='mapLoginTip'>1? <img src='img/login/bl_stone.png' /><br />1? <img src='img/login/bl_key.png' /><br />1? <img src='img/login/bl_transmutation.png' /><br />1? <img src='img/login/bl_fun.png' /><br />1? <img src='img/login/bl_merchant.png' /><br />1? <img src='img/login/bl_bank.png' /><br />1? <img src='img/login/bl_kit.png' /><br />1? <img src='img/login/bl_tp.png' /><br />1? <img src='img/login/bl_repair.png' /><br />1? <img src='img/login/bl_revive.png' /><br /></span>" />
 		<img data-src="img/login/transmutation.png" title="<span class='mapLoginTip'>3x <img src='img/login/bl_transmutation.png' /></span>" />
 		<img data-src="img/login/experience.png" title="<span class='mapLoginTip'>4x <img src='img/login/experience_i.png' /></span>" />
-		<img data-src="img/login/loyalty.png" title="<span class='mapLoginTip'>2% <img src='img/login/loyalty_coin.png' /><br /><hr /><br />1 <img src='img/login/loyalty_vision.png' /><br />1-2? <img src='img/login/loyalty_damask.png' /><br />1-2? <img src='img/login/loyalty_deldrimor.png' /><br />1-2? <img src='img/login/loyalty_elonian.png' /><br />1-2? <img src='img/login/loyalty_spiritwood.png' /><br /><br />8 <img src='img/login/loyalty_shard.png' /><br />7 <img src='img/login/loyalty_clover.png' /><br /><br />20x <img src='img/login/laurel_i.png' /><br /><br />6x <img src='img/login/experience_i.png' /><br /></span>" class="mapLoginWeekend" />
+		<img data-src="img/login/loyalty.png" title="<span class='mapLoginTip'>2% <img src='img/login/loyalty_coin.png' /><br /><hr /><br />1x <img src='img/login/loyalty_vision.png' /><br />1-2? <img src='img/login/loyalty_damask.png' /><br />1-2? <img src='img/login/loyalty_deldrimor.png' /><br />1-2? <img src='img/login/loyalty_elonian.png' /><br />1-2? <img src='img/login/loyalty_spiritwood.png' /><br /><br />8x <img src='img/login/loyalty_shard.png' /><br />7x <img src='img/login/loyalty_clover.png' /><br /><br />20x <img src='img/login/laurel_i.png' /><br /><br />6x <img src='img/login/experience_i.png' /><br /></span>" class="mapLoginWeekend" />
 		</span>
 	</div>
 <br />
@@ -799,7 +799,7 @@ A marathon of intricate jumps.
 <samp class="jsHelpCollapsible"></samp>
 <div>
 	<br />
-	<p>Each of the row below is a <a href="http://forum.renaka.com/topic/5697040/">calculator</a>, hover over them to see input (black shaded) and output (gray shaded) boxes. The <strong>topmost calculator contains hoverable tooltips</strong> about the boxes' function.</p>
+	<p>Each of the row below is a calculator, hover over them to see input (black shaded) and output (gray shaded) boxes. The <strong>topmost calculator contains hoverable tooltips</strong> about the boxes' function.</p>
 	<p>To enter an item into a calculator, click the longest input box, which is the name box, and type your search. A list of results will appear, click on one to accept that item, or continue typing to refine your search. The name box also acts as a search bar--press Enter to go to the charts site, and Esc to clear search results.</p>
 	<p>Once you have chosen an item, the current buy and sell prices will animate in color. You can either <b>use the calculator</b> by putting in your own buy and sell prices in the boxes below the name box, or <b>get notifications</b> if the item price is lower or higher than the current prices by typing your price next them. The prices have a specific syntax, use periods (.) to separate units:</p>
 	<div class="cssIndent">
@@ -813,7 +813,7 @@ A marathon of intricate jumps.
 	920.. = 920<goldcoin />
 	</div>
 	<br />
-	All input data are saved automatically. To show more calculators or search results, go to Options page, Trading section.
+	All input data are saved automatically. To show more calculators or search results, go to Options page, Trading section. Read the <a href="http://forum.renaka.com/topic/5697040/">user manual</a> for more information.
 </div>
 
 	<br />
