--- a/index.html
+++ b/index.html
@@ -68,9 +68,17 @@
 				<a class="jsTranslate linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">news</a><span> /</span>
 				<u><a class="jsTranslate" title="<dfn>Switch to Simple Clock Mode</dfn>" href="./?mode=Simple">simple mode</a></u><span> /</span>
 				<u><a class="jsTranslate" title="<dfn>Dry Top Buried Locked Chests</dfn>" href="./?page=Chests">chests</a></u>
-				<div id="mapOptions">
-					<img title="<dfn>Click for Full Map</dfn>" id="mapDisplayButton" src="img/map/display.png" alt="display" />
-					<div id="mapOptionsPopup" class="cntComposition">
+				<div id="mapGPS" class="mapHUDContainer">
+					<img title="<dfn>Click to Center Self</dfn>" id="mapGPSButton" class="mapHUDButton" src="img/map/gps.png" alt="GPS" />
+					<div id="mapGPSPopup" class="mapHUDPopup cntComposition">
+						<label title="Automatically move the map character pin to your in-game location."><input id="opt_bol_displayCharacter" type="checkbox" />Display Character Pin</label>
+						<label title="Automatically scroll the map to your in-game location."><input id="opt_bol_followCharacter" type="checkbox" />Follow Game Character</label>
+						<label title="Rate at which your character is pinpointed. This should not be faster than the overlay's rate."><input id="opt_int_msecGPSRefresh" type="number" min="50" max="1000" step="10" /> GPS Rate (ms)</label>
+					</div>
+				</div>
+				<div id="mapOptions" class="mapHUDContainer">
+					<img title="<dfn>Click for Full Map</dfn>" id="mapDisplayButton" class="mapHUDButton" src="img/map/display.png" alt="display" />
+					<div id="mapOptionsPopup" class="mapHUDPopup cntComposition">
 						<label title="Show/Hide all icons listed below (except events). Will increase initial site load time if enabled."><input id="opt_bol_showWorldCompletion" type="checkbox" /> Display world icons...</label>
 						<div id="mapOptionsDisplay">
 							<label><img src="img/map/scope.png" alt="" /><input id="opt_bol_displaySectors" type="checkbox" /> Sector Names</label>
@@ -87,9 +95,9 @@
 						</div>
 					</div>
 				</div>
-				<div id="mapZones">
-					<img title="<dfn>Click to Center Map</dfn>" id="mapCompassButton" src="img/map/compass.png" alt="compass" />
-					<div id="mapZonesPopup" class="cntComposition">
+				<div id="mapZones" class="mapHUDContainer">
+					<img title="<dfn>Click to Center Map</dfn>" id="mapCompassButton" class="mapHUDButton" src="img/map/compass.png" alt="compass" />
+					<div id="mapZonesPopup" class="mapHUDPopup cntComposition">
 						<div id="mapZoneList" class="mapLinks">
 							<div>
 							<h2 data-region="kryta"></h2>
