Separated Dry Top chains

--- a/helpsrc.html
+++ b/helpsrc.html
@@ -85,8 +85,8 @@
 	
 <h1>Embed GW2Timer.com</h1>
 <p>All of this website can be integrated into your own site! Here is a <a href="http://forum.renaka.com/topic/5547304/">preview of the example's results</a>. The following example code will display the clock pane in Bar style.</p>
-<textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=2" width="360" height="85" scrolling="no" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
-<p>Change the height attribute as you please, but the width for the panel is fixed to 360 pixels plus the vertical scrollbar's width (default 17 pixels) if you don't put <code>scrolling=&quot;no&quot;</code>. The rest of the style is up to you.</p>
+<textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=2" width="360" height="85" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
+<p>Change the height attribute as you please, but the width for the panel is fixed to 360 pixels. The rest of the style is up to you.</p>
 <p>Additionally, you can include commands in the URL so the embedded site executes any of the Options page's settings (this does not override the user's stored settings). Find more <a href="https://en.wikipedia.org/wiki/Query_string">query string</a> commands by clicking &quot;Print Website Memory&quot; on the Options page under Debug.</p>
 <p>Example iframe src:<br />
 http://gw2timer.com/?int_setClock=#<br />
@@ -94,8 +94,8 @@ http://gw2timer.com/?int_setClock=#<br />
 # = 1 = Full<br />
 # = 2 = Bar<br />
 # = 3 = No Clock</p>
-<p>Here is another example code to show the compact clock with Bright background and a scrollbar.</p>
-<textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=0&int_setDimming=1" width="377" height="220" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
+<p>Here is another example code to show the compact clock with Bright background.</p>
+<textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=0&int_setDimming=1" width="360" height="220" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
 <p>And a code to show just the list of world bosses</p>
 <textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=3&bol_expandWB=false&bol_expandLS=false" width="360" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
 <br />
