--- a/index.html
+++ b/index.html
@@ -342,6 +342,12 @@
 				</header>
 				<div id="listChainsScheduled" class="listChains"></div>
 				<header>
+					<img src="img/ui/drytop.png" alt="Dry Top" />
+					<span class="jsTranslate">Dry Top</span>
+					<ins></ins>
+				</header>
+				<div id="listChainsDryTop" class="listChains"></div>
+				<header>
 					<img src="img/event/boss.png" alt="Legacy Bosses" />
 					<span class="jsTranslate">Legacy Bosses</span>
 					<ins></ins>
