Daytime Clock, AJAX Map Section Data

--- a/bin/embed_gw2timer.html
+++ b/bin/embed_gw2timer.html
@@ -16,7 +16,7 @@
 	<br />
 
 	<h2>Example 3</h2>
-	<iframe src="http://gw2timer.com/?int_setClock=3&bol_expandWB=false&bol_expandLS=false" width="360" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
+	<iframe src="http://gw2timer.com/?int_setClock=3&bol_expandWB=false" width="360" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
 	<br />
 	<br />
 
