--- a/helpsrc.html
+++ b/helpsrc.html
@@ -1,6 +1,8 @@
 <div class="cntComposition">
-
 <header class="cntHeader">Help</header>
+
+
+
 
 <header id="headerHelp_FAQ" class="jsSection"><img src="img/ui/faq.png" alt="FAQ" />FAQ</header>
 <section>
@@ -97,7 +99,7 @@ http://gw2timer.com/?int_setClock=#<br />
 <p>Here is another example code to show the compact clock with Bright background.</p>
 <textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=0&int_setDimming=1" width="360" height="220" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
 <p>And a code to show just the list of world bosses</p>
-<textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=3&bol_expandWB=false&bol_expandLS=false" width="360" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
+<textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=3&bol_expandWB=false" width="360" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
 <br />
 <br />
 
@@ -222,5 +224,8 @@ http://gw2timer.com/?int_setClock=#<br />
 <p>Unlocking COE takes about 10 minutes from start to finish soloing, and much faster with a group. Start at the camp west of COE and follow the NPCs to do the <ins data-coord="[19954, 21625]">troll cave</ins>, then the assault will start back at the camp towards the <ins data-coord="[20555, 21919]">west entrance</ins> of COE (left side of the hexagon). If you somehow fail to reach COE, the chain will restart in 9 minutes. Else, you have unlimited time to clear the corners of the hexagon before a champ is spawned in the center, which is soloable if you dodge his slow missiles. COE will be open for 1.5-2 hours before a retake event at the <ins data-coord="[20978, 21894]">dungeon portal</ins> happens, which loops every 45 minutes if succeeded, or restarts the chain in 5-10 minutes if failed.</p>
 </section>
 <br />
+
+
+
 
 </div><!-- End of page -->
