--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<script>window.L || document.write('<script src="bin/leaflet.js"><\/script>');</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="zones.js"></script>
-	<script type="text/javascript" src="chains.js"></script>
+	<script type="text/javascript" src="data/zones.js"></script>
+	<script type="text/javascript" src="data/chains.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 <!-- Google Analytics -->
 <script>
@@ -41,7 +41,7 @@
 <body>
 	<div id="jsConsole"></div>
 	<div id="jsConsoleButtons">
-		<img title="<dfn>Select Console<dfn>" id="jsConsoleButtonSelect" src="img/ui/console_select.png" alt="Select Console" /><img title="<dfn>Close Console<dfn>" id="jsConsoleButtonClose" src="img/ui/console_close.png" alt="Close Console" />
+		<img id="jsConsoleButtonSelect" title="<dfn>Select Console<dfn>" src="img/ui/console_select.png" alt="Select Console" /><img title="<dfn>Close Console<dfn>" id="jsConsoleButtonClose" src="img/ui/console_close.png" alt="Close Console" />
 	</div>
 	<div id="paneWarning">
 		If you can read this then <strong>maybe</strong>:<br />
@@ -58,7 +58,7 @@
 		<!-- Map, the dummy nbsp is required or Leaflet won't show
 		==================================================================== -->
 		<section id="paneMap">&nbsp;
-			<article id="paneHUD">
+			<article id="paneHUDMap">
 			<div id="itemMapCoordinates">
 				<input id="mapCoordinatesMouse" type="text" />
 				<input id="mapCoordinatesCopy" type="text" />
@@ -66,11 +66,11 @@
 			</div>
 			<div id="itemMapLinksNorth" class="itemMapLinks">
 				<a class="jsTranslate linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">news</a><span> /</span>
-				<u><a class="jsTranslate" title="<dfn>Switch to Simple Mode (clock only)</dfn>" href="./?mode=Simple">simple</a></u><span> /</span>
-				<u><a class="jsTranslate" title="<dfn>Switch to Mobile Mode (right panel only)</dfn>" href="./?mode=Mobile">mobile</a></u><span> /</span>
+				<u><a class="jsTranslate" title="<dfn>Switch to Simple Mode (clock only)</dfn><br />gw2timer.com/s" href="./?mode=Simple">simple</a></u><span> /</span>
+				<u><a class="jsTranslate" title="<dfn>Switch to Mobile Mode (right panel only)</dfn><br />gw2timer.com/m" href="./?mode=Mobile">mobile</a></u><span> /</span>
 				<u><a class="jsTranslate" title="<dfn>Dry Top Buried Locked Chests</dfn>" href="./?page=Chests">chests</a></u>
 				<div id="mapGPS" class="mapHUDContainer">
-					<img title="<dfn>Click to Center Self</dfn>" id="mapGPSButton" class="mapHUDButton" src="img/map/gps.png" alt="GPS" />
+					<img id="mapGPSButton" class="mapHUDButton" title="<dfn>Click to Center Self</dfn>" src="img/map/gps.png" alt="GPS" />
 					<div id="mapGPSPopup" class="mapHUDPopup cntComposition">
 						<label title="Automatically move the map character pin to your in-game location."><input id="opt_bol_displayCharacter" type="checkbox" />Display Character Pin</label>
 						<label title="Automatically scroll the map to your in-game location."><input id="opt_bol_followCharacter" type="checkbox" />Follow Game Character</label>
@@ -78,7 +78,7 @@
 					</div>
 				</div>
 				<div id="mapOptions" class="mapHUDContainer">
-					<img title="<dfn>Click for Full Map</dfn>" id="mapDisplayButton" class="mapHUDButton" src="img/map/display.png" alt="display" />
+					<img id="mapDisplayButton" class="mapHUDButton" title="<dfn>Click for Full Map</dfn>" src="img/map/display.png" alt="display" />
 					<div id="mapOptionsPopup" class="mapHUDPopup cntComposition">
 						<label title="Show/Hide all icons listed below (except events). Will increase initial site load time if enabled."><input id="opt_bol_showWorldCompletion" type="checkbox" /> Display world icons...</label>
 						<div id="mapOptionsDisplay">
@@ -168,6 +168,15 @@
 				<a class="linkExternal" title="<dfn>Download the app to run GW2Timer inside Guild Wars 2!</dfn>" href="http://forum.renaka.com/topic/5546166/">
 					<img id="itemLogo" src="img/ui/logo.png" alt="Overlay Application" />gw2timer.com <u>overlay</u>
 				</a>
+			</div>
+			</article>
+		</section>
+		<section id="paneWvW">&nbsp;
+			<article id="paneHUDWvW">
+			<div id="itemWvWCoordinates">
+				<input id="wvwCoordinatesMouse" type="text" />
+				<input id="wvwCoordinatesCopy" type="text" />
+				<input id="wvwCoordinatesName" type="text" />
 			</div>
 			</article>
 		</section>
@@ -261,11 +270,21 @@
 					<line id="clkMarker3A" x1="50.00" y1="5.00" x2="50.00" y2="10.00" />
 					<line id="clkMarker3B" x1="50.00" y1="5.00" x2="50.00" y2="10.00" />
 				</g>
-				<g id="clkNumbers">
+				<g id="clkHoursPrime">
 					<text x="50" y="18">12</text>
 					<text x="85" y="53">3</text>
-					<text x="50" y="88">6</text>
+					<text x="50" y="87">6</text>
 					<text x="15" y="53">9</text>
+				</g>
+				<g id="clkHours">
+					<text x="68" y="22">1</text>
+					<text x="68" y="83">5</text>
+					<text x="32" y="83">7</text>
+					<text x="32" y="22">11</text>
+					<text x="81" y="35">2</text>
+					<text x="81" y="71">4</text>
+					<text x="19" y="71">8</text>
+					<text x="20" y="35">10</text>
 				</g>
 				<!-- Hands and markers initially point at 12 o'clock, JS will rotate them -->
 				<g id="clkHands" filter="url(#clkFilterShadowHand)">
@@ -279,11 +298,13 @@
 				<img id="itemClockWaypoint1" class="itemClockWaypointClip" src="img/ui/placeholder.png" alt="X:15 Waypoint">
 				<img id="itemClockWaypoint2" class="itemClockWaypointClip" src="img/ui/placeholder.png" alt="X:30 Waypoint">
 				<img id="itemClockWaypoint3" class="itemClockWaypointClip" src="img/ui/placeholder.png" alt="X:45 Waypoint">
-				<img id="itemClockStar0" class="itemClockStarClip" src="img/ui/placeholder.png" alt="X:00 Waypoint">
-				<img id="itemClockStar1" class="itemClockStarClip" src="img/ui/placeholder.png" alt="X:15 Waypoint">
 			</div>
-			<time id="itemTimeLocal" class="itemTimeDigital"><var id="itemTimeLocalActual">00:00</var><var id="itemTimeLocalExtra"></var></time>
-			<time id="itemTimeServer" class="itemTimeDigital">16:00</time>
+			<time id="itemTimeLocal" class="itemTimeDigital">
+				<var id="itemTimeLocalActual" class="curHelp">00:00</var><var id="itemTimeLocalExtra"></var>
+			</time>
+			<time id="itemTimeDaytime" class="itemTimeDigital">
+				<span title="<img src='img/ui/sun.png'> Daylight<br /><img src='img/ui/moon.png'> Nighttime<br />(Minutes Remaining)"><img id="itemTimeDayIcon" class="curHelp" src="img/ui/sun.png" />&nbsp;<var id="itemTimeDayTime">16:00</var></span>
+			</time>
 			<div id="itemLanguage">
 				<span><img src="img/ui/language.png" alt="Language" /></span>
 				<ul id="itemLanguagePopup" class="cntPopup">
@@ -307,7 +328,7 @@
 				<a class="linkExternal" title="<dfn>Like GW2Timer on Facebook :)</dfn>" href="http://www.facebook.com/gw2timer">
 					<img src="img/ui/fb.png" alt="Facebook" />
 				</a>
-				<a class="linkExternal" title="<dfn>Tweet GW2Timer on Twitter :)</dfn>" href="http://twitter.com/intent/tweet?text=http%3A%2F%2FGW2Timer.com%20-%20World%20Boss%20Timers%20and%20Daily%20Map%20Guide">
+				<a class="linkExternal" title="<dfn>Tweet GW2Timer on Twitter :)</dfn>" href="http://twitter.com/intent/tweet?text=http%3A%2F%2Fgw2timer.com%20-%20World%20Boss%20Timers%20and%20Daily%20Map%20Guide">
 					<img src="img/ui/tt.png" alt="Twitter" />
 				</a>
 			</div>
@@ -317,7 +338,7 @@
 		<nav id="paneMenu" class="paneRight">
 			<div id="menuChains" class="menuButton" title="<dfn>Chains:</dfn> Timers, Events, Schedule"></div>
 			<div id="menuMap" class="menuButton" title="<dfn>Map:</dfn> Dailies, Gathering, JPs, TP, Checklists"></div>
-			<!--<div id="menuWvW" class="menuButton" title="<dfn>WvW:</dfn> Map, Tracer, Stats"></div>-->
+			<!--<div id="menuWvW" class="menuButton" title="<dfn>WvW:</dfn> Map, Tracer, Siege"></div>-->
 			<div id="menuHelp" class="menuButton" title="<dfn>Help:</dfn> FAQ, About, Walkthrough"></div>
 			<div id="menuOptions" class="menuButton" title="<dfn>Options:</dfn> Display, Format, Alarm"></div>
 		</nav>
@@ -342,6 +363,10 @@
 					<ins id="listChainsFirstButton"></ins>
 				</header>
 				<div id="listChainsScheduled" class="listChains"></div>
+				<div id="itemStar">
+					<img id="itemClockStar0" class="itemClockStarClip" src="img/ui/placeholder.png" alt="X:00 Waypoint">
+					<img id="itemClockStar1" class="itemClockStarClip" src="img/ui/placeholder.png" alt="X:15 Waypoint">
+				</div>
 				<header>
 					<img src="img/ui/drytop.png" alt="Dry Top" />
 					<span class="jsTranslate">Dry Top</span>
@@ -378,7 +403,7 @@
 					<h2>Timer</h2>
 					<label title="Hide the chain bars when you check them."><input id="opt_bol_hideChecked" type="checkbox" /> Hide checked off world bosses</label>
 					<label title="Includes all scheduled world bosses."><input id="opt_bol_expandWB" type="checkbox" /> Auto-expand active World Boss chain bars</label>
-					<label title="Includes Dry Top map events."><input id="opt_bol_expandLS" type="checkbox" /> Auto-expand active Living Story chain bars</label>
+					<label title="Includes Dry Top map events."><input id="opt_bol_expandDT" type="checkbox" /> Auto-expand active Dry Top chain bars</label>
 					<label title="Inactive/Gray chain bars."><input id="opt_bol_collapseChains" type="checkbox" /> Auto-collapse inactive chain bars</label>
 					<label title="Display the countdown to when a chain starts or the soonest scheduled time?"><input id="opt_bol_useCountdown" type="checkbox" /> Countdown to future chains</label>
 					<div class="optFieldsets">
@@ -406,7 +431,7 @@
 					<span>For map options, hover over the <img class="cntIconExample" src="img/map/display.png" alt="Icon" /> button on the top right corner of the map pane.</span><br />
 					<br />
 					<h2>Alarm</h2>
-					<span>Voice announcement requires Chrome, Firefox, or IE9+. Multilingualism is only available for Chrome. Click the speaker icon on the chains page to toggle sound.</span>
+					<span>Voice announcement requires Chrome, Firefox, or IE11+. Multilingualism is only available for Chrome. Click the speaker icon on the chains page to toggle sound.</span>
 					<h3>Checklist Mode</h3>
 					<span>When should the program announce the next chain?</span>
 					<label title="This is every 15 minutes."><input id="opt_bol_alertAtStart" type="checkbox" /> When a new chain begins</label>
@@ -416,6 +441,7 @@
 					<span>How many minutes before a subscribed chain starts should you be alerted? Enter 0 to disable an alarm. Checked off bosses are ignored.</span>
 					<label><input id="opt_int_alertSubscribedFirst" type="number" min="0" max="30" step="1" /> First Alarm</label>
 					<label><input id="opt_int_alertSubscribedSecond" type="number" min="0" max="30" step="1" /> Second Alarm</label>
+					<label title="After the lowest minutes alarm."><input id="opt_bol_alertUnsubscribe" type="checkbox" /> Unsubscribe from boss after the final alarm</label>
 					<br />
 					<h2>Trading</h2>
 					<label title="Regularly get the current buy and sell prices. This option must be enabled for notification of desired price range to work."><input id="opt_bol_refreshPrices" type="checkbox" /> Auto-refresh data and enable notification</label>
