Night time correction

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 				<var id="itemTimeLocalActual" class="curHelp">00:00</var><var id="itemTimeLocalExtra"></var>
 			</time>
 			<time id="itemTimeDaytime" class="itemTimeDigital">
-				<span title="<img src='img/ui/sun.png'> Daylight<br /><img src='img/ui/moon.png'> Nighttime<br />(Minutes Remaining)"><img id="itemTimeDayIcon" class="curHelp" src="img/ui/sun.png" />&nbsp;<var id="itemTimeDayTime">16:00</var></span>
+				<span class="curHelp" title="<img src='img/ui/sun.png'> Daylight<br /><img src='img/ui/moon.png'> Nighttime<br />(Minutes Remaining)"><img id="itemTimeDayIcon" src="img/ui/sun.png" />&nbsp;<var id="itemTimeDayTime">16:00</var></span>
 			</time>
 			<div id="itemLanguage">
 				<span><img src="img/ui/language.png" alt="Language" /></span>
