Reposition timer in Simple Mode

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 				<img id="itemClockWaypoint3" class="itemClockWaypointClip" src="img/ui/placeholder.png" alt="X:45 Waypoint">
 			</div>
 			<time id="itemTimeLocal" class="itemTimeDigital">
-				<var id="itemTimeLocalActual" class="curHelp">00:00</var><var id="itemTimeLocalExtra"></var>
+				<var id="itemTimeLocalActual" class="curHelp">00:00</var>
 			</time>
 			<time id="itemTimeDaytime" class="itemTimeDigital">
 				<span class="curHelp" title="<img src='img/ui/sun.png'> Daylight<br /><img src='img/ui/moon.png'> Nighttime<br />(Minutes Remaining)"><img id="itemTimeDayIcon" src="img/ui/sun.png" />&nbsp;<var id="itemTimeDayTime">16:00</var></span>
