--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
 			<time id="itemTimeDaytime" class="itemTimeDigital">
 				<span class="curHelp" title="<img src='img/ui/sun.png'> Daylight<br /><img src='img/ui/moon.png'> Nighttime<br />(Minutes Remaining)"><img id="itemTimeDayIcon" src="img/ui/sun.png" />&nbsp;<var id="itemTimeDayTime">16:00</var></span>
 			</time>
+			<var id="itemTimeLocalExtra"></var>
 			<div id="itemLanguage">
 				<span><img src="img/ui/language.png" alt="Language" /></span>
 				<ul id="itemLanguagePopup" class="cntPopup">
