--- a/mapsrc.html
+++ b/mapsrc.html
@@ -110,7 +110,7 @@
 
 
 
-<header id="headerMap_Resource" class="jsSection"><img src="img/ui/resource.png" alt="Resource Nodes" /><var
+<header id="headerMap_Resource" class="jsSection mapOnly"><img src="img/ui/resource.png" alt="Resource Nodes" /><var
 	data-de="Ressourcenknoten"
 	data-es="Nodos de Recursos"
 	data-fr="Noeuds de Ressources"
@@ -144,7 +144,7 @@
 
 
 
-<header id="headerMap_JP" class="jsSection"><img src="img/ui/jp.png" alt="Jumping Puzzles" /><var
+<header id="headerMap_JP" class="jsSection mapOnly"><img src="img/ui/jp.png" alt="Jumping Puzzles" /><var
 	data-de="Rätsel Springen"
 	data-es="Rompecabezas Saltos"
 	data-fr="Énigmes Sauts"
@@ -223,7 +223,7 @@ A marathon of intricate jumps.
 
 
 
-<header id="headerMap_Collectible" class="jsSection"><img src="img/ui/ls.png" alt="Collectible" /><var
+<header id="headerMap_Collectible" class="jsSection mapOnly"><img src="img/ui/ls.png" alt="Collectible" /><var
 	data-de="Sammlerstücke"
 	data-es="Artículos de Colección"
 	data-fr="Objets de Collection"
@@ -472,18 +472,18 @@ A marathon of intricate jumps.
 <samp class="jsHelpTooltip" title="Type your own text in the boxes then press Enter to make a custom daily checklist."></samp>
 <br />
 <div id="chlCustom"><!-- &zwnj; is an invisible character, used because empty label appears without a right border in Chrome -->
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Did dailies" /><br />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Gathered home nodes" /><br />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Opened JP chests" /><br />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Crafted timegates" /><br />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="Fed Mawdrey and Star" /><br />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
-	<label><input type="checkbox" />&zwnj;</label><input type="text" value="" /><br />
+	<span><label><input type="checkbox" />&zwnj;</label><input type="text" value="Did dailies" /></span>
+	<span><label><input type="checkbox" />&zwnj;</label><input type="text" value="Gathered home nodes" /></span>
+	<span><label><input type="checkbox" />&zwnj;</label><input type="text" value="Opened JP chests" /></span>
+	<span><label><input type="checkbox" />&zwnj;</label><input type="text" value="Crafted timegates" /></span>
+	<span><label><input type="checkbox" />&zwnj;</label><input type="text" value="Fed Mawdrey and Star" /></span>
+	<span><label><input type="checkbox" />&zwnj;</label><input type="text" value="" /></span>
+	<span><label><input type="checkbox" />&zwnj;</label><input type="text" value="" /></span>
+	<span><label><input type="checkbox" />&zwnj;</label><input type="text" value="" /></span>
+	<span><label><input type="checkbox" />&zwnj;</label><input type="text" value="" /></span>
+	<span><label><input type="checkbox" />&zwnj;</label><input type="text" value="" /></span>
+	<span><label><input type="checkbox" />&zwnj;</label><input type="text" value="" /></span>
+	<span><label><input type="checkbox" />&zwnj;</label><input type="text" value="" /></span>
 	<br />
 	<button id="chlCustomRestore" class="cssRight">Default Text</button>
 	<button id="chlCustomUncheck">Uncheck All</button>
