--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 					<span>How many minutes before a subscribed chain starts should you be alerted? Enter 0 to disable an alarm. Checked off bosses are ignored.</span>
 					<label><input id="opt_int_alertSubscribedFirst" type="number" min="0" max="30" step="1" /> First Alarm</label>
 					<label><input id="opt_int_alertSubscribedSecond" type="number" min="0" max="30" step="1" /> Second Alarm</label>
-					<label title="This happens at server reset or timestamp expiration."><input id="opt_bol_alertAutosubscribe" type="checkbox" /> Autosubscribe to today's daily world boss</label>
+					<label title="This happens at server reset or timestamp expiration. Alarm must be in Subscription Mode."><input id="opt_bol_alertAutosubscribe" type="checkbox" /> Autosubscribe to today's daily world boss</label>
 					<label title="After the lowest minutes alarm."><input id="opt_bol_alertUnsubscribe" type="checkbox" /> Unsubscribe from boss after the final alarm</label>
 					<br />
 					<h2>Trading</h2>
