DST boolean fix

--- a/helpsrc.html
+++ b/helpsrc.html
@@ -58,9 +58,11 @@
 2014 May 15 - Site beta<br />
 2014 June 1 - Gone gold<br />
 2014 June 18-22 - Multilingualism, concurrent chains, simple mode<br />
-2014 July 12 - Overlay desktop app released<br />
+2014 July 12-15 - Overlay desktop app released, Dry Top timers<br />
+2014 August 6 - Map completion icons
 2014 September 9 - Trading Post tracker<br />
 2015 February 7 - GPS for overlay<br />
+2015 March 4 - Calendar, mobile mode<br />
 </p>
 
 <hr />
