Sprites for Daily section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- JavaScript -->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
-	<!-- CDN Fallbacks -->
+	<!-- CDN fallbacks -->
 	<script>window.jQuery || document.write('<script src="bin/jquery.min.js"><\/script>');</script>
 	<script>window.L || document.write('<script src="bin/leaflet.js"><\/script>');</script>
 	<!-- Web application files  -->
@@ -203,14 +203,14 @@
 			<div id="paneClockBackground" class="clkSizeRegular"></div>
 			<img id="paneClockFace" class="clkSizeRegular" src="img/background/face.png" alt="Clock Face">
 			<div id="paneClockIcons" class="clkSizeRegular">
-				<img id="clkIconSD0" class="iconSD" src="img/chain/tbd.png" alt="X:00" />
-				<img id="clkIconSD1" class="iconSD" src="img/chain/tbd.png" alt="X:15" />
-				<img id="clkIconSD2" class="iconSD" src="img/chain/tbd.png" alt="X:30" />
-				<img id="clkIconSD3" class="iconSD" src="img/chain/tbd.png" alt="X:45" />
-				<img id="clkIconHC0" class="iconHC" src="img/chain/tbd.png" alt="X:00" />
-				<img id="clkIconHC1" class="iconHC" src="img/chain/tbd.png" alt="X:15" />
-				<img id="clkIconHC2" class="iconHC" src="img/chain/tbd.png" alt="X:30" />
-				<img id="clkIconHC3" class="iconHC" src="img/chain/tbd.png" alt="X:45" />
+				<img id="clkIconSD0" class="iconSD" src="img/ui/placeholder.png" alt="X:00" />
+				<img id="clkIconSD1" class="iconSD" src="img/ui/placeholder.png" alt="X:15" />
+				<img id="clkIconSD2" class="iconSD" src="img/ui/placeholder.png" alt="X:30" />
+				<img id="clkIconSD3" class="iconSD" src="img/ui/placeholder.png" alt="X:45" />
+				<img id="clkIconHC0" class="iconHC" src="img/ui/placeholder.png" alt="X:00" />
+				<img id="clkIconHC1" class="iconHC" src="img/ui/placeholder.png" alt="X:15" />
+				<img id="clkIconHC2" class="iconHC" src="img/ui/placeholder.png" alt="X:30" />
+				<img id="clkIconHC3" class="iconHC" src="img/ui/placeholder.png" alt="X:45" />
 			</div>
 			<svg id="clk" viewBox="0 0 100 100"><!-- x=50,y=50 is the center -->
 				<defs id="clkDefinitions"><!-- Shadow filters -->
@@ -360,7 +360,7 @@
 				<header>
 					<img src="img/ui/scheduled.png" alt="Scheduled Bosses" />
 					<span class="jsTranslate">Scheduled Bosses</span>
-					<ins id="listChainsFirstButton"></ins>
+					<kbd id="listChainsFirstButton"></kbd>
 				</header>
 				<div id="listChainsScheduled" class="listChains"></div>
 				<div id="itemDryTopClip">
@@ -370,25 +370,25 @@
 				<header>
 					<img src="img/ui/drytop.png" alt="Dry Top" />
 					<span class="jsTranslate">Dry Top</span>
-					<ins></ins>
+					<kbd></kbd>
 				</header>
 				<div id="listChainsDryTop" class="listChains"></div>
 				<header>
 					<img src="img/event/boss.png" alt="Legacy Bosses" />
 					<span class="jsTranslate">Legacy Bosses</span>
-					<ins></ins>
+					<kbd></kbd>
 				</header>
 				<div id="listChainsLegacy" class="listChains"></div>
 				<header>
 					<img src="img/chain/temple.png" alt="Orr Temples" />
 					<span class="jsTranslate">Orr Temples</span>
-					<ins></ins>
+					<kbd></kbd>
 				</header>
 				<div id="listChainsTemple" class="listChains"></div>
 				<header id="headerTimetable">
 					<img src="img/ui/clock.png" alt="Timetable" />
 					<span class="jsTranslate">Full Timetable</span>
-					<ins></ins>
+					<kbd></kbd>
 				</header>
 				<div id="listChainsTimetable" class="listChains"></div>
 				<div id="listDummyBottom"></div>
