--- a/helpsrc.html
+++ b/helpsrc.html
@@ -110,7 +110,7 @@ http://gw2timer.com/?int_setClock=#<br />
 
 
 
-<header id="headerHelp_Scheduled" class="jsSection"><img src="img/ui/scheduled.png" alt="Scheduled Bosses" />Scheduled Bosses</header>
+<header id="headerHelp_Scheduled" class="jsSection"><img src="img/ui/categories/scheduled.png" alt="Scheduled Bosses" />Scheduled Bosses</header>
 <section>
 <h1>Walkthrough</h1>
 
@@ -156,7 +156,7 @@ http://gw2timer.com/?int_setClock=#<br />
 
 
 
-<header id="headerHelp_Legacy" class="jsSection"><img src="img/event/boss.png" alt="Legacy Bosses" />Legacy Bosses</header>
+<header id="headerHelp_Legacy" class="jsSection"><img src="img/ui/categories/legacy.png" alt="Legacy Bosses" />Legacy Bosses</header>
 <section>
 <p>These bosses give the same rewards as scheduled world bosses, but their chains do not start at a set time--they are asynchronous depending on the megaserver instance (like any regular events). You have to check the places they happen and ask map chat when the chain was last finished so you can wait for it to restart.</p>	
 
@@ -176,7 +176,7 @@ http://gw2timer.com/?int_setClock=#<br />
 
 
 
-<header id="headerHelp_Temples" class="jsSection"><img src="img/chain/temple.png" alt="Temples" />Temples</header>
+<header id="headerHelp_Temples" class="jsSection"><img src="img/ui/categories/temple.png" alt="Temples" />Temples</header>
 <section>
 <p>All temples drop 30 dragonite and unlock a <a href="http://wiki.guildwars2.com/wiki/Temple_armor">karma vendor</a> for 1.5-2 hours selling exotic armor and trinkets. You can easily tell whether a temple chain is active by looking for a contested waypoint inside the temple.</p>
 
