--- a/index.html
+++ b/index.html
@@ -324,13 +324,13 @@
 			</div>
 			<div id="itemSocial">
 				<a class="linkExternal" title="<dfn>Learn GW2Timer's features :?</dfn>" href="http://forum.renaka.com/topic/5602037/">
-					<img src="img/ui/info.png" alt="Info" />
+					<ins class="sixteen sixt_in"></ins>
 				</a>
 				<a class="linkExternal" title="<dfn>Like GW2Timer on Facebook :)</dfn>" href="http://www.facebook.com/gw2timer">
-					<img src="img/ui/fb.png" alt="Facebook" />
+					<ins class="sixteen sixt_fb"></ins>
 				</a>
 				<a class="linkExternal" title="<dfn>Tweet GW2Timer on Twitter :)</dfn>" href="http://twitter.com/intent/tweet?text=http%3A%2F%2Fgw2timer.com%20-%20World%20Boss%20Timers%20and%20Daily%20Map%20Guide">
-					<img src="img/ui/tt.png" alt="Twitter" />
+					<ins class="sixteen sixt_tt"></ins>
 				</a>
 			</div>
 		</section>
@@ -346,7 +346,8 @@
 		<!-- Content mini-pane
 		==================================================================== -->
 		<section id="paneContent" class="paneRight">
-			<article id="layerChains"><!-- This layer will be populated by JS -->
+			<div id="itemThrobber"><em></em></div>
+			<article id="plateChains"><!-- This plate will be populated by JS -->
 				<div id="optAlarm">
 					<img id="optAlarmIcon" src="img/ui/placeholder.png" alt="Mode"/><img id="optAlarmSpeaker" src="img/ui/speaker.png" alt="Alarm"/>
 					<div id="itemAlarmPopup" class="cntComposition cntPopup">
@@ -393,10 +394,10 @@
 				<div id="listChainsTimetable" class="listChains"></div>
 				<div id="listDummyBottom"></div>
 			</article>
-			<article id="layerMap"></article><!-- Empty layers will be populated by AJAX -->
-			<article id="layerWvW"></article>
-			<article id="layerHelp"></article>
-			<article id="layerOptions">
+			<article id="plateMap"></article><!-- Empty plates will be populated by AJAX -->
+			<article id="plateWvW"></article>
+			<article id="plateHelp"></article>
+			<article id="plateOptions">
 				<div class="cntComposition">
 					<header class="cntHeader">Options</header>
 					<br />
