Added WB arrival alert

--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
 					<br />
 					<h2>Alarm</h2>
 					<span>Voice announcement requires Chrome, Firefox, or IE11+. Multilingualism is only available for Chrome. Click the speaker icon on the chains page to toggle sound.</span>
+					<label title="This is based on the prediction. Will alert you when the final event in the unchecked or subscribed chain begins."><input id="opt_bol_alertArrival" type="checkbox" /> Alert the arrival of the actual boss</label>
 					<h3>Checklist Mode</h3>
 					<span>When should the program announce the next chain?</span>
 					<label title="This is every 15 minutes."><input id="opt_bol_alertAtStart" type="checkbox" /> When a new chain begins</label>
