Modularized chains categories

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -365,7 +365,7 @@ A marathon of intricate jumps.
 	<div id="chlNotepadButtons">
 		<button>1</button><button>2</button><button>3</button><button>4</button><button>5</button><button>6</button><button>7</button><button>8</button><button>9</button>
 	</div>
-	<button id="chlNotepadSave">Save</button>
+	<button id="chlNotepadSave"><img data-src="img/ui/check.png" /></button>
 	<div id="chlNotepadSheets">
 		<textarea>This is your notepad. You can store your game notes here. The buttons above will view that numbered sheet, and clicking any buttons will do a save.</textarea>
 		<textarea>Sheet 2</textarea>
