--- a/helpsrc.html
+++ b/helpsrc.html
@@ -158,7 +158,8 @@ http://gw2timer.com/?int_setClock=#<br />
 
 <header id="headerHelp_Legacy" class="jsSection"><img src="img/ui/categories/legacy.png" alt="Legacy Bosses" />Legacy Bosses</header>
 <section>
-<p>These bosses give the same rewards as scheduled world bosses, but their chains do not start at a set time--they are asynchronous depending on the megaserver instance (like any regular events). You have to check the places they happen and ask map chat when the chain was last finished so you can wait for it to restart.</p>	
+<p>These bosses give the same rewards as scheduled world bosses, but their chains do not start at a set time--they are asynchronous depending on the megaserver instance (like any regular events). You have to check the places they happen and ask map chat when the chain was last finished so you can wait for it to restart.</p>
+<p>Please click the &quot;Legacy&quot; tab on the Chains page to view these events and paths.</p>
 
 <h2>Fire Shaman</h2>
 <p>Jump through a <dfn data-coord="[27494, 9876]">crevice</dfn> in the obsidian wall to get to the boss. His phases are as follows: Minions -&gt; Boss -&gt; Minions -&gt; Boss -&gt; Minions -&gt; Boss. You can attack the boss normally, but during the minions phase, you have to kill enough minions for the boss to be attackable again. There is a hidden mechanic (or bug) where stepping near the giant <dfn data-coord="[27415, 9639]">Fire Elemental</dfn> will cause the event's progress to reset, so people should stay and kill minions near the heal bubble the charr allies made. Crossing the fire lines or attacking the boss is okay as long as nobody touches the giant Fire Elemental, but you should not take this chance as ignorant players will follow you and bungle it. This chain restarts after 25-35 minutes.</p>
@@ -179,6 +180,7 @@ http://gw2timer.com/?int_setClock=#<br />
 <header id="headerHelp_Temples" class="jsSection"><img src="img/ui/categories/temple.png" alt="Temples" />Temples</header>
 <section>
 <p>Temples unlock a <a href="http://wiki.guildwars2.com/wiki/Temple_armor">karma vendor</a> for 1.5-2 hours selling exotic armor and trinkets. You can easily tell whether a temple chain is active by looking for a contested waypoint inside the temple.</p>
+<p>Please click the &quot;Temples&quot; tab on the Chains page to view these events and paths.</p>
 
 <h2>Lyssa</h2>
 <p>Usually people will capture the <dfn data-coord="[13238, 23581]">Union seal</dfn> first for the waypoint so they can map call for help. The northwest seal can be completed by picking up batteries from the lightning towers and giving them to the glass pod, or throwing them at the golems. The southeast seal requires protecting the cannon from waves of risens, which attack every seals, and attack them again 10 or 20-30 minutes after the seals were secured. During this timeframe the <dfn data-coord="[13133, 23954]">priestess</dfn> can be attacked, except for the times she uses her perma stun skill when your character is facing her (also causes more mobs to spawn). The two things to watch for is the champion gorillas which can insta down you, and the seals being attacked again, which if not quickly reclaimed after the risens had captured it, will cause the boss to fully heal. A retake event occurs 1.5-2 hours after, and you must let the risens recapture temple for the chain to instantly restart, else that retake event loops 1-1.5 hours later.</p>
